Fix cg-wrap Overflow

--- a/src/styles/chessground.css
+++ b/src/styles/chessground.css
@@ -3,7 +3,9 @@
   height: 510px;
   position: relative;
   display: block;
+  overflow: hidden; 
 }
+
 cg-helper {
   position: absolute;
   width: 12.5%;
